[gd_scene format=3 uid="uid://b1tuc03bg4ec6"]

[ext_resource type="Script" uid="uid://bfpchxh35y0gr" path="res://scenes/ui/widgets/labels/quest_display/quest_item_ui.gd" id="1_wgbur"]

[node name="QuestItemUI" type="PanelContainer" unique_id=479369799]
custom_minimum_size = Vector2(100, 60)
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_wgbur")

[node name="VBoxContainer" type="VBoxContainer" parent="." unique_id=709933937]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="VBoxContainer" unique_id=730917998]
unique_name_in_owner = true
layout_mode = 2
text = "quest title
"

[node name="DescLabel" type="Label" parent="VBoxContainer" unique_id=489446245]
unique_name_in_owner = true
layout_mode = 2
text = "quest desc"

[node name="ProgressBar" type="ProgressBar" parent="VBoxContainer" unique_id=995442655]
unique_name_in_owner = true
layout_mode = 2

[node name="ProgressLabel" type="Label" parent="VBoxContainer" unique_id=1040401635]
unique_name_in_owner = true
layout_mode = 2
text = "prog label"
